# PESignUp

./: .gitignore  pyproject.toml
src/: main.py
src/database/: schema.sql
src/global_src/: base_classes.py  base_db_classes.py  base_embeds.py  client.py  constants.py  db.py
src/global_src/general_utils/: string_cleaning.py
src/modules/signup/: embeds.py  form.py
