[project]
name = "pesignup"
version = "0.1.0-alpha.1"
description = "Discord Signup Bot for NYP Piano Ensemble"
requires-python = ">=3.13"
dependencies = [
    "discord.py==2.7.1",
    "python-dotenv==1.2.2",
    "aiosqlite==0.22.1",
    "PyNaCl==1.6.2",
    "rapidfuzz==3.14.5",
    "pandas==3.0.2",
]
